added points